objects/Advisory_Idea__c.object
<CustomObject>
    <description>This is the object which will contain the Ideas for the Innovation Ideas Page</description>
    <fields>
        <fullName>Comments_Count__c</fullName>
        <label>Comments Count</label>
        <summaryForeignKey>Advisory_Idea_Comment__c.Advisory_Idea__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goal_Impact_Potential__c</fullName>
        <label>Goal/Impact Potential</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Level_Description__c</fullName>
        <label>High Level Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_or_Need_this_Addresses__c</fullName>
        <label>Problem or Need this Addresses</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Advisory_Idea_Vote__c.Type_Value__c</summarizedField>
        <summaryForeignKey>Advisory_Idea_Vote__c.Advisory_Idea__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TopIdea__c</fullName>
        <defaultValue>false</defaultValue>
        <description>.</description>
        <label>TopIdea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunities__c</fullName>
        <label>Volunteer Opportunities</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Advisory Idea</label>
    <listViews>
        <fullName>Top_Ideas</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Score__c</columns>
        <columns>Comments_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopIdea__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top Ideas</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Idea-{0}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>